# mina-delegation-program-tech

./: .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: build_stateless_verifier_docker.yaml  e2e.yml
blockchain_mock/: README.md  block_reader.py  bp_keys.csv  data.py  generate_submissions.py  local_block_reader.py  network.py  s3_block_reader.py
db_migration/: README.md  db_diff.py  migrate.sql
dummy_blockchain/: README.md  dummy-submission.json  gen_blocks.sh
e2e_test/: E2ETestBlockGeneration.md  E2ETestBlockProducers.md  README.md  data.py  gen_blocks.sh  generate_submissions.py  local_block_reader.py  network.py
e2e_test/config/: .env.gpg
e2e_test/topology/: genesis_ledger.json  topology.json
e2e_test/topology/uptime_service_config/: app_config.json
load_test/: README.md  locustfile.py  random_submitters.py  submitters.json
load_test/payload/default/: payload-2024-01-29-17:07:11,778765.json  payload-2024-01-29-17:07:17,846719.json  payload-2024-01-29-17:21:17,578612.json  payload-2024-01-29-17:21:18,959262.json  payload-2024-01-29-17:21:20,593754.json  payload-2024-01-29-17:22:18,558169.json  payload-2024-01-29-17:36:15,363712.json  payload-2024-01-29-17:36:18,989377.json  payload-2024-01-29-17:39:23,379496.json  payload-2024-01-29-17:40:14,645774.json  payload-2024-01-29-17:51:21,923308.json  payload-2024-01-29-18:06:15,298121.json  (+5 more)
load_test/resources/: monitor_resources.sh  plot_resources.py
load_test/scraper/: Dockerfile  README.md  scraper.py
scripts/: logs.sh
test/config/: .env.gpg
test/topology/: genesis_ledger.json
(+84 files in other folders)
