[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Mina Foundation"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
pystache = "^0.6.5"
boto3 = "^1.34.16"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"
psutil = "^5.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
